--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Cities</h1>
     <ul>  
-        <li>Manchester</li>
+        <li>Birmingham</li>
        <li>London</li> 
     </ul>
    
