--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cities</h1>
+    <h1>City</h1>
     <ul>  
         <li>Birmingham</li>
        <li>London</li> 
