--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
     <h1>Aylar</h1>
     <ul>  
-        <li>Birmingham</li>
+        <li>Ocak</li>
        <li>London</li> 
         <li>Manchester</li>
         <li>Yorkshire</li>
