--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Aylar</h1>
     <ul>  
         <li>Ocak</li>
-       <li>London</li> 
+       <li>Subat</li> 
         <li>Manchester</li>
         <li>Yorkshire</li>
     </ul>
