--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ul>  
         <li>Ocak</li>
        <li>Subat</li> 
-        <li>Manchester</li>
+        <li>Mart</li>
         <li>Yorkshire</li>
     </ul>
     
