--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <li>Mart</li>
         <li>Nisan</li>
          <li>Mayis</li>
+        <li>Haziran</li>
+        
     </ul>
     
 </body>
