--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li>Temmuz</li>
         <li>Agustos</li>
         <li>Eylul</li>
-        
+        <li>Ekim</li>
     </ul>
     
 </body>
