--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
         <li>Kasim</li>
         <li>Aralik</li>
     </ul>
+     <h2> Gunler</h2>
+    <ul>
+        <li>Pazartesi</li>
+        <li>sali</li>
+        <li>Carsamba</li>
+        <li>Persembe</li>
+        <li>cuma</li>
+        <li>cumartesi</li>
+        <li>pazar</li>
+    </ul>
     
 </body>
 </html>
