--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li>Kasim</li>
         <li>Aralik</li>
     </ul>
-     <h2> Gunler</h2>
+     <h2> Renkler</h2>
     <ul>
         <li>Pazartesi</li>
         <li>sali</li>
