--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </ul>
      <h2> Renkler</h2>
     <ul>
-        <li>Pazartesi</li>
+        <li>Kirmizi</li>
         <li>sali</li>
         <li>Carsamba</li>
         <li>Persembe</li>
