--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <ul>
         <li>Kirmizi</li>
         <li>sali</li>
-        <li>Carsamba</li>
+        <li>mavi</li>
         <li>Persembe</li>
         <li>cuma</li>
         <li>cumartesi</li>
