--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li>Kirmizi</li>
         <li>sali</li>
         <li>mavi</li>
-        <li>Persembe</li>
+        <li>yesil</li>
         <li>cuma</li>
         <li>cumartesi</li>
         <li>pazar</li>
