--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li>sali</li>
         <li>mavi</li>
         <li>yesil</li>
-        <li>cuma</li>
+        <li>mor</li>
         <li>cumartesi</li>
         <li>pazar</li>
     </ul>
