--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li>mavi</li>
         <li>yesil</li>
         <li>mor</li>
-        <li>cumartesi</li>
+        <li>turuncu</li>
         <li>pazar</li>
     </ul>
     
