--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li>yesil</li>
         <li>mor</li>
         <li>turuncu</li>
-        <li>pazar</li>
+        <li>Lila</li>
     </ul>
     
 </body>
