--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
         <li>turuncu</li>
         <li>Lila</li>
     </ul>
+     <h2> Renkler</h2>
+    <ul>
+        <li>Kirmizi</li>
+        <li>sali</li>
+        <li>mavi</li>
+        <li>yesil</li>
+        <li>mor</li>
+        <li>turuncu</li>
+        <li>Lila</li>
+    </ul>
     
 </body>
 </html>
