--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li>turuncu</li>
         <li>Lila</li>
     </ul>
-     <h2> Renkler</h2>
+     <h2> Meyveler</h2>
     <ul>
         <li>Kirmizi</li>
         <li>sali</li>
