--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </ul>
      <h2> Meyveler</h2>
     <ul>
-        <li>Kirmizi</li>
+        <li>Elma</li>
         <li>sali</li>
         <li>mavi</li>
         <li>yesil</li>
