--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      <h2> Meyveler</h2>
     <ul>
         <li>Elma</li>
-        <li>sali</li>
+        <li>Armut</li>
         <li>mavi</li>
         <li>yesil</li>
         <li>mor</li>
