--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <ul>
         <li>Elma</li>
         <li>Armut</li>
-        <li>mavi</li>
+        <li>Kiraz</li>
         <li>yesil</li>
         <li>mor</li>
         <li>turuncu</li>
