--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
         <li>turuncu</li>
         <li>Lila</li>
     </ul>
+      <h2> Meyveler</h2>
+    <ul>
+        <li>Elma</li>
+        <li>Armut</li>
+        <li>Kiraz</li>
+        <li>yesil</li>
+        <li>mor</li>
+        <li>turuncu</li>
+        <li>Lila</li>
+    </ul>
     
 </body>
 </html>
