--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li>turuncu</li>
         <li>Lila</li>
     </ul>
-      <h2> Meyveler</h2>
+      <h2> kiz isimleri</h2>
     <ul>
         <li>Elma</li>
         <li>Armut</li>
