--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </ul>
       <h2> kiz isimleri</h2>
     <ul>
-        <li>Elma</li>
+        <li>Sema</li>
         <li>Armut</li>
         <li>Kiraz</li>
         <li>yesil</li>
