--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2> kiz isimleri</h2>
     <ul>
         <li>Sema</li>
-        <li>Armut</li>
+        <li>Sena</li>
         <li>Kiraz</li>
         <li>yesil</li>
         <li>mor</li>
