--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <ul>
         <li>Sema</li>
         <li>Sena</li>
-        <li>Kiraz</li>
+        <li>Hatice</li>
         <li>yesil</li>
         <li>mor</li>
         <li>turuncu</li>
