--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li>Sema</li>
         <li>Sena</li>
         <li>Hatice</li>
-        <li>yesil</li>
+        <li>Esra</li>
         <li>mor</li>
         <li>turuncu</li>
         <li>Lila</li>
