--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <li>Sena</li>
         <li>Hatice</li>
         <li>Esra</li>
-        <li>mor</li>
+        <li>Elmas</li>
         <li>turuncu</li>
         <li>Lila</li>
     </ul>
