--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li>Hatice</li>
         <li>Esra</li>
         <li>Elmas</li>
-        <li>turuncu</li>
+        <li>Turkan</li>
         <li>Lila</li>
     </ul>
     
