--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li>Esra</li>
         <li>Elmas</li>
         <li>Turkan</li>
-        <li>Lila</li>
+        <li>Lale</li>
     </ul>
     
 </body>
